Final Project upload
Final upload, quiz category and SCQF level disabled in the quiz creator.